--- a/arushi.html
+++ b/arushi.html
@@ -218,10 +218,9 @@
                 <strong>Mark:</strong> The mark type used is a line (path) to
                 represent the number of participating countries in different
                 sports/events over time in both the line charts linked together
-                by bidirectional linking.
-                <br />
-                The Line mark indicates how the relationship evolves over time,
-                showing increases, decreases, or reversals.
+                by bidirectional linking. The Line mark indicates how the
+                relationship evolves over time, showing increases, decreases, or
+                reversals.
               </li>
               <li>
                 <strong>Channels:</strong> Horizontal Position & Order:
@@ -236,32 +235,25 @@
               <li>
                 <strong>Characteristics of Channels:</strong> Different colors
                 of the lines ensure the differentiation and easy following of
-                the lines.
-                <br />
-                The ordering of years follows a natural chronological sequence,
-                helping in comprehension.
+                the lines. The ordering of years follows a natural chronological
+                sequence, helping in comprehension.
               </li>
               <li>
                 <strong>Interactivity:</strong> Using the dropdown selection,
                 users can select a specific sport, which inadvertently affects
                 the events plot too, displaying the top 3 events associated with
-                that sport.
-                <br />
-                Hovering over the event plot displays its title, year, and NOC
-                count.
-                <br />
-                Bidirectional linking connects the trends of sports and their
-                corresponding top 3 events, allowing users to see how
-                participation has evolved. It allows users to highlight a time
-                range and view corresponding trends in both graphs.
+                that sport. Hovering over the event plot displays its title,
+                year, and NOC count. Bidirectional linking connects the trends
+                of sports and their corresponding top 3 events, allowing users
+                to see how participation has evolved. It allows users to
+                highlight a time range and view corresponding trends in both
+                graphs.
               </li>
               <li>
                 <strong>Critique:</strong> Some sports/events may have small
                 fluctuations, making it difficult to see trends without zooming
-                in.
-                <br />
-                A normalization option (e.g., showing percentage growth instead
-                of raw numbers) could make comparisons clearer.
+                in. A normalization option (e.g., showing percentage growth
+                instead of raw numbers) could make comparisons clearer.
               </li>
             </ul>
             <h3>Bar Chart with Interactive Legend and Dropdown</h3>
@@ -286,43 +278,33 @@
               <li>
                 <strong>Characteristics of Channels:</strong> The left-to-right
                 order of years follows a naturally ordered reading flow, making
-                trends easy to follow.
-                <br />
-                The vertical axis uses an ordered scale, allowing for a
-                straightforward comparison of participation trends through the
-                height of the bars.
-                <br />
-                The colour hue channel ensures that male and female
-                participation trends are visually distinct. Stacked or grouped
-                bars allow direct comparisons within the same sport.
+                trends easy to follow. The vertical axis uses an ordered scale,
+                allowing for a straightforward comparison of participation
+                trends through the height of the bars. The colour hue channel
+                ensures that male and female participation trends are visually
+                distinct. Stacked or grouped bars allow direct comparisons
+                within the same sport.
               </li>
               <li>
                 <strong>Interactivity:</strong> A drop-down menu allows users to
                 filter participation trends by sport. It allows users to select
-                and view trends in any of the 10 sports.
-                <br />
-                Hovering over a bar displays a tooltip showing the exact sport,
-                sex, count of IDs, and year through the use of a tooltip.
-                <br />
-                An interactive legend allows users to view the bars only for
-                male or female athletes by clicking on the legend. This allows
-                for a more clearer understanding of trends by gender.
+                and view trends in any of the 10 sports. Hovering over a bar
+                displays a tooltip showing the exact sport, sex, count of IDs,
+                and year through the use of a tooltip. An interactive legend
+                allows users to view the bars only for male or female athletes
+                by clicking on the legend. This allows for a more clearer
+                understanding of trends by gender.
               </li>
               <li>
                 <strong>Critique:</strong> Stacked bars can make it difficult to
                 compare male and female participation directly since both bars
                 don’t share a common baseline. But the interactive legend helps
-                with this, allowing to single view per gender.
-                <br />
-                Some sports have fluctuating participation, making trends
-                difficult to interpret at a glance.
-                <br />
-                If bars are too close together, it may be difficult to
-                distinguish year-by-year trends.
-                <br />
-                The colour choices for gender should be distinct enough to
-                prevent confusion, especially in grayscale or
-                colorblind-friendly modes.
+                with this, allowing to single view per gender. Some sports have
+                fluctuating participation, making trends difficult to interpret
+                at a glance. If bars are too close together, it may be difficult
+                to distinguish year-by-year trends. The colour choices for
+                gender should be distinct enough to prevent confusion,
+                especially in grayscale or colorblind-friendly modes.
               </li>
             </ul>
             <h3>Density Plot & Bar Chart (Age Distribution of Medalists)</h3>
@@ -350,24 +332,17 @@
                 <strong>Characteristics of Channels:</strong> The Density plot
                 allows for visualizing distributions, making it easier to see
                 where the majority (most density) of medalists fall in terms of
-                age.
-                <br />
-                The bar chart provides a quick overview of age bins, giving an
-                easier way to compare total counts.
-                <br />
-                Colour hue ensures medal-type differentiation, allowing users to
-                analyze which age groups dominate gold, silver, bronze or
-                non-winners (None).
+                age. The bar chart provides a quick overview of age bins, giving
+                an easier way to compare total counts. Colour hue ensures
+                medal-type differentiation, allowing users to analyze which age
+                groups dominate gold, silver, bronze or non-winners (None).
               </li>
               <li>
                 <strong>Interactivity:</strong> The dropdown selection allows
                 users to filter by sport, helping focus on a specific sport at
-                once.
-                <br />
-                Hovering over the Density plot reveals tooltips with precise
-                information about age distributions and density. In the case of
-                the bar chart it gives precise age and count of records.
-                <br />
+                once. Hovering over the Density plot reveals tooltips with
+                precise information about age distributions and density. In the
+                case of the bar chart it gives precise age and count of records.
                 Clicking on a medal type in the legend filters the
                 visualization, dimming the other medals to highlight trends for
                 a single category. This allows users to view the trends for a
@@ -377,13 +352,11 @@
                 <strong>Critique:</strong> The Density plot might be difficult
                 to interpret for users unfamiliar with density estimation and
                 just in general it is not easily interpretable at first glance.
-                <br />
                 Outliers (very young or old medalists) might distort the
-                visualization if not handled properly.
-                <br />
-                Stacking medal counts in the bar chart could make it harder to
-                compare total medal distributions between age groups. Luckily,
-                the interactive legend helps here.
+                visualization if not handled properly. Stacking medal counts in
+                the bar chart could make it harder to compare total medal
+                distributions between age groups. Luckily, the interactive
+                legend helps here.
               </li>
             </ul>
           </div>
