--- a/adwait.html
+++ b/adwait.html
@@ -171,8 +171,8 @@
             <p>
               The visualizations above support the following tasks by employing
               interactive heatmaps with linked detail brush charts, faceted bar
-              charts, and line charts that dynamically adapt based on user
-              selections:
+              charts, line chart matrices, and area density charts that
+              dynamically adapt based on user selections:
             </p>
 
             <ul>
