--- a/adwait.html
+++ b/adwait.html
@@ -187,7 +187,7 @@
               <li>
                 <strong>Compare Seasons:</strong> To compare the performance of
                 top performing countries in different events over both Summer
-                and Winter seasons and follow a country's performance over time.
+                and Winter seasons.
               </li>
               <li>
                 <strong>Explore a Country:</strong> To choose a country to
